2005-12-045  Prakash Punnoor <prakash@punnoor.de>

	* Makefile.am: add CMakeLists.txt to EXTRA_DIST
	
	* README: add CMake use instructions

2005-12-04  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: add -DNDEBUG
	
	* AUTHORS: add myself

2005-12-03  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, include/AL/alut.h, src/alutBufferData.c,
	src/alutInputStream.c, src/alutLoader.c src/alutWaveform.c: Avoid
	generating a depedency on GLIBC 2.3. Added --enable-more-warnings
	configure flag and fixed the resulting warnings.

2005-12-03  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: made pretty feature-complete

2005-12-02  Prakash Punnoor <prakash@punnoor.de>

	* src/alutCodec.c, src/alutLoader.c: fix warnings
	
	* CMakeLists.txt: added; doesn't build examples/tests yet

2005-11-28  Sven Panne  <sven.panne@aedion.de>

	* test_suite\Makefile.am: Distribute example sounds, too.

	* admin/RPM/freealut.spec: Updated build dependencies.

2005-11-27  Sven Panne  <sven.panne@aedion.de>

	* src/alutCodec.c, src/alutLoader.c, src/alutWaveform.c: Re-indented.

	* Makefile.am, README, configure.ac: Rearranged the admin subdirectory a
	little bit, making it hopefully clearer which files belong to which
	build system.

	* admin/RPM/freealut.spec, admin/autotools/.cvsignore,
	admin/autotools/.indent.pro, admin/autotools/m4/alut_c__attribute.m4,
	admin/autotools/m4/alut_check_cflags_wall.m4,
	admin/autotools/m4/alut_check_flag.m4,
	admin/autotools/m4/alut_check_func.m4,
	admin/autotools/m4/alut_eval_stderr.m4: Added.

	* admin/.cvsignore, admin/.indent.pro, admin/freealut.spec,
	admin/m4/alut_c__attribute.m4, admin/m4/alut_check_cflags_wall.m4,
	admin/m4/alut_check_flag.m4, admin/m4/alut_check_func.m4,
	admin/m4/alut_eval_stderr.m4: Removed.

	* src/alutBufferData.c, src/alutCodec.c, src/alutInputStream.c,
	src/alutInternal.h, src/alutLoader.c, src/alutWaveform.c: Consistently
	use size_t for sizes internally, because ALsizei is signed and we don't